[gd_scene load_steps=4 format=3 uid="uid://ct66crv37a0vn"]

[ext_resource type="Script" path="res://scripts/Levels/level_transition.gd" id="1_qki3g"]
[ext_resource type="Texture2D" uid="uid://05hk8wq15upk" path="res://assets/textures/Decorations/door.png" id="2_wmitt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4hlqp"]
size = Vector2(64, 78.5)

[node name="LevelTransition" type="Node2D"]
script = ExtResource("1_qki3g")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 0.75)
shape = SubResource("RectangleShape2D_4hlqp")

[node name="Door" type="Sprite2D" parent="."]
position = Vector2(-4.76837e-07, -2.38419e-07)
scale = Vector2(1.42073, 1.26695)
texture = ExtResource("2_wmitt")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
